@startuml MainPage Structure

namespace CourseworkApp.Views {
    class MainPage <<View>> {
        - _viewModel : MainPageViewModel
        + MainPage(viewModel : MainPageViewModel)
        # OnAppearing() : void
    }
}

namespace CourseworkApp.ViewModels {
    class MainPageViewModel <<ViewModel>> {
        - _dbContext : TestDbContext
        - _isInitialized : bool
        + Title : string <<ObservableProperty>>
        + Description : string <<ObservableProperty>>
        + MainPageViewModel(dbContext : TestDbContext)
        + InitializeAsync() : Task
        - LoadDataAsync(id : int) : Task
    }
}

namespace CourseworkApp.Database.Models {

    class MainPageModel <<Model>> {
        + Id : int <<PK>>
        + Text : string <<Required>>
    }
}

namespace CourseworkApp.Database.Data {
    class TestDbContext <<DbContext>> {
        + MainPageDB : DbSet<MainPageModel>
        ' Other DbSets would go here...
    }
}


' --- Relationships within the application ----
CourseworkApp.Views.MainPage --> CourseworkApp.ViewModels.MainPageViewModel : "uses (injects)"
CourseworkApp.ViewModels.MainPageViewModel ..> CourseworkApp.Database.Data.TestDbContext : "uses (injects)"

CourseworkApp.ViewModels.MainPageViewModel ..> CourseworkApp.Database.Models.MainPageModel : "processes data of "

CourseworkApp.Database.Data.TestDbContext o-- "*" CourseworkApp.Database.Models.MainPageModel : "contains (DbSet)"

@enduml